# libconstants

./: meson.build  meson_options.txt
cross/: macos_arm64.ini  wasm.ini
examples/: meson.build  simple.cpp
src/constants/lib/: const.cpp
